# FormSync

./: .gitignore  README.MD  README.md  download-weights.sh  main.py  pose2d.py  pose3d.py  pyproject.toml  requirements.txt  utils2.py
frontend/: package.json
frontend/src/: utils.ts
frontend/src/components/: form.tsx
frontend/src/pages/: motions.astro
frontend/src/pages/reference/: [id].astro
generate_animation/: animate.py  joints_10.npy  joints_17.npy  joints_20.npy  joints_27.npy
get_full_video/: angle_names.txt  angles_all_frames.npy  animate.py  demovideo.py  demovideo2.py  frames_all.npy  get_all_3d_joints.py  joints_all_frames.npy  test.py
get_skeleton_from_video/: frame.npy  frame_depth.npy  get_3d_joints.py  get_depth_api.py
hrnet/: config.py
klay_test/: depth_api.py  dpt.py  junk.txt  klay_actual.npy  klay_background_removed.npy  klay_depth.npy  klay_depth_color.npy  klay_test_3d_joints.py  removal_api.py
steph_test/: get_depth_api.py  removal_api.py  steph_3d_joints.py  steph_3d_joints_2.py  steph_actual.npy  steph_actual_2.npy  steph_background_removed.npy  steph_depth.npy  steph_depth_2.npy  steph_depth_color.npy  steph_depth_color_2.npy
work/: camera.py  pose2d.py  pose3d.py  pyproject.toml  sort.py  test.py  utils.py
work/yolo/: bbox.py  darknet.py
yolo/: human_detector.py  util.py
