[project]
name = "work"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "filterpy>=1.4.5",
    "numba>=0.61.2",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torch-dct>=0.1.6",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "yacs>=0.1.8",
]
